--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,7 +14,7 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Categories', name: 'categories', widget: 'mardown' }
-      - { label: 'Tags', name: 'tags', widget: 'markdown' }
+      - { label: 'Categories', name: 'categories', widget: 'text' }
+      - { label: 'Tags', name: 'tags', widget: 'text' }
       - { label: 'Description', name: 'description', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
