--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ googleAnalytics = ""
 ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
 enableEmoji = true
 footnotereturnlinkcontents = "↩"
+disqusShortname = "yourdiscussshortname"
 
 [permalinks]
     post = "/:slug/"
@@ -18,6 +19,10 @@ footnotereturnlinkcontents = "↩"
     name = "Tags"
     url = "/tags/"
     weight = 2
+[[menu.main]]
+    name = "Music"
+    url = "/music/"
+    weight = 3
 [[menu.feed]]
     name = "Subscribe"
     url = "/index.xml"
